Se agrego el titulo al body

--- a/RandomizarPartida.html
+++ b/RandomizarPartida.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="./CSS/estilosME.css">
     </head>
     <body>
+        <h1>Randomizador de partidas para Mass Effect</h1>
         <section id="randomizar">
             <button id="boton-randomizar">Randomizar Parametros</button>
         </section>
