agregado titulo h2 al html

--- a/RandomizarPartida.html
+++ b/RandomizarPartida.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Randomizador de partidas para Mass Effect</h1>
+        <h2>Diviértete con éste desafio ✌</h2>
         <section id="randomizar">
             <button id="boton-randomizar">Randomizar Parametros</button>
         </section>
