Se agregó sección de upgrades de armas al html, funcion de selección de upgrades para Arma Principal con metodo splice para el upgrade 2

--- a/RandomizarPartida.html
+++ b/RandomizarPartida.html
@@ -25,6 +25,10 @@
         <section id="seleccion-arma-principal">
             <p>Tu arma principal es: <span id="arma-principal"></span></p>
         </section>
+        <section id="seleccion-upgrades-arma-principal">
+            <p>Tu Upgrade #1 en Arma Principal es: <span id="upgrade1-arma-principal"></span></p>
+            <p>Tu Upgrade #2 en Arma Principal es: <span id="upgrade2-arma-principal"></span></p>
+        </section>
         <section id="seleccion-arma-secundaria">
             <p>Tu arma secundaria es: <span id="arma-secundaria"></span></p>
         </section>
