Se agregó seccion de seleccion de upgrades Arma Secundaria al HTML, también se agregó lógica para seleccionar upgrades de arma secundaria y resolver conflictos de upgrades similares

--- a/RandomizarPartida.html
+++ b/RandomizarPartida.html
@@ -32,6 +32,10 @@
         <section id="seleccion-arma-secundaria">
             <p>Tu arma secundaria es: <span id="arma-secundaria"></span></p>
         </section>
+        <section id="seleccion-upgrades-arma-secundaria">
+            <p>Tu Upgrade #1 en Arma Secundaria es: <span id="upgrade1-arma-secundaria"></span></p>
+            <p>Tu Upgrade #2 en Arma Secundaria es: <span id="upgrade2-arma-secundaria"></span></p>
+        </section>
         <section id="seleccion-armadura">
             <p>Tu armadura es: <span id="armadura"></span></p>
         </section>
