Se agrego seccion de armadura personalizada a HTML, también se agrego lógica para seleccionar la armadura y las piezas por separado en caso de aparecer armadura personalizada

--- a/RandomizarPartida.html
+++ b/RandomizarPartida.html
@@ -39,6 +39,9 @@
         <section id="seleccion-armadura">
             <p>Tu armadura es: <span id="armadura"></span></p>
         </section>
+        <section id="armadura-personalizada">
+            <span id="elementos-armadura-personalizada"></span>
+        </section>
         <section id="seleccion-peloton">
             <p>Tu compañero 1 es: <span id="compañero-1"></span></p>
             <p>Tu compañero 2 es: <span id="compañero-2"></span></p>
