Se agrego # a la seccion peloton, se agregó la lógica para la seleccion de compañeros

--- a/RandomizarPartida.html
+++ b/RandomizarPartida.html
@@ -43,8 +43,8 @@
             <span id="elementos-armadura-personalizada"></span>
         </section>
         <section id="seleccion-peloton">
-            <p>Tu compañero 1 es: <span id="compañero-1"></span></p>
-            <p>Tu compañero 2 es: <span id="compañero-2"></span></p>
+            <p>Tu compañero #1 es: <span id="compañero-1"></span></p>
+            <p>Tu compañero #2 es: <span id="compañero-2"></span></p>
         </section>
 
         <script src="./JS/RandomizadorME.js"></script>
