Se agregó desactivación del botón randomizar, se inició trabajo en css, se agregó fuente de texto

--- a/RandomizarPartida.html
+++ b/RandomizarPartida.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="./CSS/estilosME.css">
     </head>
     <body>
+        <img src="./imagenes/ME3 Background.jpg" />
         <h1>Randomizador de partidas para Mass Effect</h1>
         <h2>Diviértete con éste desafio ✌</h2>
         <section id="randomizar">
