Se agregó botón reiniciar

--- a/RandomizarPartida.html
+++ b/RandomizarPartida.html
@@ -10,6 +10,7 @@
         <h2>Configura un inicio de partida loco ✌</h2>
         <section id="randomizar">
             <button id="boton-randomizar">Randomizar Parámetros</button>
+            <button id="boton-reiniciar">Reiniciar</button>
         </section>
         
         <section id="seccion-de-orden">
