Se creó lógica para seleccionar armamento y upgrades para el compañero 1 caso de Javik/Kaidan

--- a/RandomizarPartida.html
+++ b/RandomizarPartida.html
@@ -66,36 +66,36 @@
                 </div>
             </section>
             <section id ="seleccion-armamento-peloton">
-                <span class="titulo-compañero" id="compañero-1">Seguidor 1</span>
+                <span class="titulo-compañero" id="titulo-compañero-1">Seguidor 1</span>
                 <div id="seleccion-arma-principal-compañero-1">
-                    <p>Arma principal de <span id="compañero-1"></span>: <span class="item-aleatorio" id="arma-principal-compañero-1"></span></p>
+                    <p>Arma principal: <span class="item-aleatorio" id="arma-principal-compañero-1"></span></p>
                 </div>
                 <div id="seleccion-upgrades-arma-principal-compañero-1">
-                    <p>Mejora #1 en Arma Principal de <span id="compañero-1"></span>: <span class="item-aleatorio" id="upgrade1-arma-principal-compañero-1"></span></p>
-                    <p>Mejora #2 en Arma Principal de <span id="compañero-1"></span>: <span class="item-aleatorio" id="upgrade2-arma-principal-compañero-1"></span></p>
+                    <p>Mejora #1 en Arma Principal: <span class="item-aleatorio" id="upgrade1-arma-principal-compañero-1"></span></p>
+                    <p>Mejora #2 en Arma Principal: <span class="item-aleatorio" id="upgrade2-arma-principal-compañero-1"></span></p>
                 </div>
                 <div id="seleccion-arma-secundaria-compañero-1">
-                    <p>Arma secundaria de <span id="compañero-1"></span>: <span class="item-aleatorio" id="arma-secundaria-compañero-1"></span></p>
+                    <p>Arma secundaria: <span class="item-aleatorio" id="arma-secundaria-compañero-1"></span></p>
                 </div>
                 <div id="seleccion-upgrades-arma-secundaria-compañero-1">
-                    <p>Mejora #1 en Arma Secundaria de <span id="compañero-1"></span>: <span class="item-aleatorio" id="upgrade1-arma-secundaria-compañero-1"></span></p>
-                    <p>Mejora #2 en Arma Secundaria de <span id="compañero-1"></span>: <span class="item-aleatorio" id="upgrade2-arma-secundaria-compañero-1"></span></p>
+                    <p>Mejora #1 en Arma Secundaria: <span class="item-aleatorio" id="upgrade1-arma-secundaria-compañero-1"></span></p>
+                    <p>Mejora #2 en Arma Secundaria: <span class="item-aleatorio" id="upgrade2-arma-secundaria-compañero-1"></span></p>
                 </div>
 
-                <span class="titulo-compañero" id="compañero-2">Seguidor 2</span>
+                <span class="titulo-compañero" id="titulo-compañero-2">Seguidor 2</span>
                 <div id="seleccion-arma-principal-compañero-2">
-                    <p>Arma principal de <span id="compañero-2"></span>: <span class="item-aleatorio" id="arma-principal-compañero-2"></span></p>
+                    <p>Arma principal: <span class="item-aleatorio" id="arma-principal-compañero-2"></span></p>
                 </div>
                 <div id="seleccion-upgrades-arma-principal-compañero-2">
-                    <p>Mejora #1 en Arma Principal de <span id="compañero-2"></span>: <span class="item-aleatorio" id="upgrade1-arma-principal-compañero-2"></span></p>
-                    <p>Mejora #2 en Arma Principal de <span id="compañero-2"></span>: <span class="item-aleatorio" id="upgrade2-arma-principal-compañero-2"></span></p>
+                    <p>Mejora #1 en Arma Principal: <span class="item-aleatorio" id="upgrade1-arma-principal-compañero-2"></span></p>
+                    <p>Mejora #2 en Arma Principal: <span class="item-aleatorio" id="upgrade2-arma-principal-compañero-2"></span></p>
                 </div>
                 <div id="seleccion-arma-secundaria-compañero-2">
-                    <p>Arma secundaria de <span id="compañero-2"></span>: <span class="item-aleatorio" id="arma-secundaria-compañero-2"></span></p>
+                    <p>Arma secundaria: <span class="item-aleatorio" id="arma-secundaria-compañero-2"></span></p>
                 </div>
                 <div id="seleccion-upgrades-arma-secundaria-compañero-2">
-                    <p>Mejora #1 en Arma Secundaria de <span id="compañero-2"></span>: <span class="item-aleatorio" id="upgrade1-arma-secundaria-compañero-2"></span></p>
-                    <p>Mejora #2 en Arma Secundaria de <span id="compañero-2"></span>: <span class="item-aleatorio" id="upgrade2-arma-secundaria-compañero-2"></span></p>
+                    <p>Mejora #1 en Arma Secundaria: <span class="item-aleatorio" id="upgrade1-arma-secundaria-compañero-2"></span></p>
+                    <p>Mejora #2 en Arma Secundaria: <span class="item-aleatorio" id="upgrade2-arma-secundaria-compañero-2"></span></p>
                 </div>
             </section>
         </section>
