Se colocó C mayuscula en el texto de los compañeros y se agrego nueva info en la leyenda

--- a/RandomizarPartida.html
+++ b/RandomizarPartida.html
@@ -61,8 +61,8 @@
             <section id="seleccion-peloton">
                 <p id="titulo-seccion">PELOTÓN</p>
                 <div>
-                    <p>compañero 1: <span class="item-aleatorio" id="compañero-1"></span></p>
-                    <p>compañero 2: <span class="item-aleatorio" id="compañero-2"></span></p>
+                    <p>Compañero 1: <span class="item-aleatorio" id="compañero-1"></span></p>
+                    <p>Compañero 2: <span class="item-aleatorio" id="compañero-2"></span></p>
                 </div>
             </section>
             <section id ="seleccion-armamento-peloton">
@@ -102,7 +102,8 @@
                 <div id="titulo-leyenda">La intención de este randomizador es aumentar la dificultad de Mass Effect 3, la invitación es a:
                 </div>
                 <p>Utilizar el armamento en estado básico y sin mejoras que tiene tu carrera militar por defecto, hasta conseguir el armamento asignado por el randomizador</p>
-                <p>Utilizar los compañeros de pelotón auxiliares en su estado básico y sin mejoras, hasta conseguir a los compañeros asignados por el randomizador</p> 
+                <p>Utilizar los compañeros de pelotón auxiliares en su estado básico y sin mejoras, hasta conseguir a los compañeros asignados por el randomizador</p>
+                <p>Toma pantallazos de tus parámetros randomizados para que los puedas consultar a medida que avanzas en la partida</p> 
                 <p>Completar todas las misiones disponibles</p>
             </section>
         </section>
